k8s/installs/aks/patch-spring-profile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  template:
    spec:
      containers:
        - name: kboot-tasks
